--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,10 @@ maze: match visualizer
     </div>
   </header>
 
+  <div class="spinner">
+    <span class="fa fa-spinner fa-pulse fa-5x"></span>
+  </div>
+
   <div class="container" id="vis-wrap">
     <div id="vis"></div>
   </div>
