Add info icon for match type (still need to add explanation alert)

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,10 +45,10 @@ maze: match visualizer
             <label class="btn btn-default">
               <input type="radio" name="options" id="mum" autocomplete="off" title="Maximal Unique Matches"> MUMs
             </label>
-          </div>Match type
+          </div>match type <span class="fa fa-info-circle"></span>
           <br>
 
-          <input id="config-length" type="number" class="form-control" value="12">Match length
+          <input id="config-length" type="number" class="form-control" value="12">minimal match length
 
         </div> <!-- end modal-body -->
 
