--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,8 @@ maze: match visualizer
     <div id="vis"></div>
   </div>
 
-  <div id="footer-icon-wrap">
+  <!-- TODO: do we keep/move this? -->
+  <div id="footer-icon-wrap" class="hide">
     <span class="fa fa-chevron-circle-up fa-2x" id="footer-icon"></span>
   </div>
 
