--- a/templates/index.html
+++ b/templates/index.html
@@ -92,6 +92,11 @@ maze: match visualizer
     <div id="vis"></div>
   </div>
 
+  <div class="control-btns">
+    <span id="control-btn-left" class="fa fa-toggle-left fa-2x hide"></span>
+    <span id="control-btn-right" class="fa fa-toggle-right fa-2x hide"></span>
+  </div>
+
   <!-- TODO: do we keep/move this? -->
   <div id="footer-icon-wrap" class="hide">
     <span class="fa fa-chevron-circle-up fa-2x" id="footer-icon"></span>
