New query toggle buttons

--- a/static/maze.css
+++ b/static/maze.css
@@ -120,6 +120,11 @@ footer a:active, footer a:focus {
   text-align: center;
 }
 
+#vis-wrap > * {
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .axis line,
 .axis path {
   fill: none;
@@ -129,18 +134,4 @@ footer a:active, footer a:focus {
 
 .axis text {
   font: 10px sans-serif;
-}
-
-.control-btns {
-  text-align: center;
-}
-
-.control-btns .fa {
-  color: #aaa;
-}
-
-.control-btns .fa.active {
-  color: black;
-  opacity: 0.85;
-  cursor: pointer;
 }
