Add checkbox for scaling chart w.r.t. viewport dimensions

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,8 +56,10 @@ maze: match visualizer
             <p><b>maxmatch:</b> maximal matches regardless of their uniqueness</p>
           </div>
           <br>
-
           <input id="config-length" type="number" class="form-control" value="15">minimal match length
+
+          <h4>UI options</h4>
+          <input id="checkbox-scale" type="checkbox" checked> Scale chart according to browser window
 
         </div> <!-- end modal-body -->
 
