Add class for toggle buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -92,11 +92,11 @@ maze: match visualizer
   </div>
 
   <div class="container" id="vis-wrap">
-    <button id="control-btn-left" type="button" class="btn btn-default hide">
+    <button id="control-btn-left" type="button" class="btn btn-default hide control-btn">
       <span class="glyphicon glyphicon-chevron-left"></span>
     </button>
     <span id="vis"></span>
-    <button id="control-btn-right" type="button" class="btn btn-default hide">
+    <button id="control-btn-right" type="button" class="btn btn-default hide control-btn">
       <span class="glyphicon glyphicon-chevron-right"></span>
     </button>
   </div>
