--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,9 @@ maze: match visualizer
           <input id="config-length" type="number" class="form-control" value="15">minimal match length
 
           <h4>UI options</h4>
-          <input id="checkbox-scale" type="checkbox" checked> Scale chart according to browser window
+          <input id="checkbox-scale" type="checkbox" checked> Scale chart width/height according to browser window
+          <br>
+          <input id="config-dim" type="number" class="form-control" value="600" disabled>chart width/height
 
         </div> <!-- end modal-body -->
 
