--- a/templates/index.html
+++ b/templates/index.html
@@ -58,10 +58,10 @@ maze: match visualizer
           <br>
           <input id="config-length" type="number" class="form-control" value="15">minimal match length
 
-          <h4>UI options</h4>
+          <h4>Chart options</h4>
           <input id="checkbox-scale" type="checkbox" checked> Scale chart width/height according to browser window
           <br>
-          <input id="config-dim" type="number" class="form-control" value="600" disabled>chart width/height
+          <input id="config-dim" type="number" class="form-control" value="600" disabled>chart width/height (px)
 
         </div> <!-- end modal-body -->
 
