--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,16 @@ maze: match visualizer
         </div>
         <div class="modal-body">
 
+          <h4>Input files</h4>
+          <div class="dropzone">
+            <span class="fa fa-upload fa-2x"></span>
+            Drop reference FASTA here
+          </div>
+          <div class="dropzone">
+            <span class="fa fa-upload fa-2x"></span>
+            Drop query FASTA here
+          </div>
+
           <h4>MUMmer3 options</h4>
           <div id="config-matches" class="btn-group" data-toggle="buttons">
             <label class="btn btn-default active">
