UI input file drag-and-drop instead of server options

--- a/static/maze.css
+++ b/static/maze.css
@@ -136,6 +136,11 @@ footer a:active, footer a:focus {
   margin-bottom: 5px;
 }
 
+.dropzone-hover {
+  color: DodgerBlue;
+  border-color: DodgerBlue;
+}
+
 #vis-wrap {
   text-align: center;
 }
