Bug fix: clicking file upload buttons triggered display of match info

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@ maze: match visualizer
             <label class="btn btn-default">
               <input type="radio" name="options" autocomplete="off" title="Maximal Unique Matches"> maxmatch
             </label>
-          </div>match type <span class="fa fa-info-circle"></span>
+          </div>match type <span id="match-info" class="fa fa-info-circle"></span>
           <div class="alert alert-info hide" id="matches-info">
             <p><b>mumreference:</b> matches that are unique in the reference but not necessarily in the query</p>
             <p><b>mum:</b> matches that are unique in both the reference and query</p>
