Bug fix: file upload icons had cursor:pointer

--- a/static/maze.css
+++ b/static/maze.css
@@ -112,7 +112,7 @@ footer a:active, footer a:focus {
   text-align: center;
 }
 
-#configModal .modal-body .fa {
+#match-info {
   cursor: pointer;
 }
 
