--- a/templates/index.html
+++ b/templates/index.html
@@ -16,11 +16,11 @@ maze: match visualizer
 
   <header>
     <div class="container-fluid">
-      <button type="button" class="pull-left button-header" data-toggle="modal" data-target="#configModal">
+      <button type="button" class="pull-left button-header" data-toggle="modal" data-target="#config-modal">
         <span class="glyphicon glyphicon-menu-hamburger"></span>
       </button>
       <div class="pull-left">setup</div>
-      <button type="button" class="pull-right button-header" data-toggle="modal" data-target="#controlModal">
+      <button type="button" class="pull-right button-header" data-toggle="modal" data-target="#control-modal">
         <span class="glyphicon glyphicon-menu-hamburger"></span>
       </button>
       <div class="pull-right">tools</div>
@@ -29,12 +29,12 @@ maze: match visualizer
   </header>
 
  <!-- Config modal -->
-  <div class="modal fade" id="configModal" tabindex="-1">
+  <div class="modal fade" id="config-modal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Setup</h4>
+          <h4 class="modal-title">Setup</h4>
         </div>
         <div class="modal-body">
 
@@ -84,12 +84,12 @@ maze: match visualizer
   </div> <!-- end config modal -->
 
   <!-- Control modal -->
-  <div class="modal fade" id="controlModal" tabindex="-1">
+  <div class="modal fade" id="control-modal" tabindex="-1">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Tools</h4>
+          <h4 class="modal-title">Tools</h4>
         </div>
         <div class="modal-body">
 
