--- a/templates/index.html
+++ b/templates/index.html
@@ -126,6 +126,7 @@ maze: match visualizer
   <script src="{{ url_for('static', filename='jquery.min.js') }}"></script>
   <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
   <script src="{{ url_for('static', filename='d3.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='pako.min.js') }}"></script>
   <script src="{{ url_for('static', filename='maze.js') }}"></script>
 </body>
 </html>
