Add input file names and icons to setup menu to reflect upload status

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,14 @@ maze: match visualizer
             <span class="fa fa-upload fa-2x"></span>
             Drop query FASTA here
           </div>
+          <div>
+            <span id="ref-icon-chosen" class="fa fa-times"></span>
+            ref. file: <span id="ref-span-chosen"></span>
+            <br>
+            <span id="query-icon-chosen" class="fa fa-times"></span>
+            query file: <span id="query-span-chosen"></span>
+          </div>
+
 
           <h4>MUMmer3 options</h4>
           <div id="config-matches" class="btn-group" data-toggle="buttons">
