--- a/static/maze.css
+++ b/static/maze.css
@@ -160,3 +160,8 @@ footer a:active, footer a:focus {
 .axis text {
   font: 10px sans-serif;
 }
+
+.overlay {
+  fill: none;
+  pointer-events: all;
+}
