Interaction between maze and maze_detail

--- a/templates/index.html
+++ b/templates/index.html
@@ -119,6 +119,9 @@ maze: match visualizer
     <button id="control-btn-right" type="button" class="btn btn-default hide control-btn">
       <span class="glyphicon glyphicon-chevron-right"></span>
     </button>
+    <button id="control-btn-detail" type="button" class="btn btn-default hide control-btn">
+      <span class="glyphicon glyphicon-new-window"></span>
+    </button>
   </div>
 
   <div id="footer-icon-wrap">
