--- a/templates/detail.html
+++ b/templates/detail.html
@@ -52,6 +52,12 @@ maze: match visualizer
             <span class="fa fa-spinner fa-pulse fa-5x"></span>
           </div>
         </div>
+        <h3>reference breakpoints</h3>
+        <div class="list-group" id="listLASTrefbps">
+          <div class="spinner">
+            <span class="fa fa-spinner fa-pulse fa-5x"></span>
+          </div>
+        </div>
       </div>
 
     </div>
