--- a/templates/detail.html
+++ b/templates/detail.html
@@ -19,7 +19,7 @@ maze: match visualizer
     <div class="container-fluid">
       <div class="pull-left" id="title-upper-left"></div>
       <!-- Todo(meiers): make this button work -->
-      <button type="button" class="pull-right button-header">
+      <button type="button" class="pull-right button-header" id="btn-close">
         <span class="glyphicon glyphicon-remove"></span>
       </button>
       <div class="pull-right">close</div>
