Create dedicated module for breakpoints page. Rename "detail" to "breakpoints"

--- a/templates/breakpoints.html
+++ b/templates/breakpoints.html
@@ -77,6 +77,6 @@ maze: match visualizer
   <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
   <script src="{{ url_for('static', filename='d3.min.js') }}"></script>
   <script src="{{ url_for('static', filename='pako.min.js') }}"></script>
-  <script src="{{ url_for('static', filename='maze_detail.js') }}"></script>
+  <script src="{{ url_for('static', filename='maze_breakpoints.js') }}"></script>
 </body>
 </html>
