Export-to-SVG function.
There is now a "save as SVG" button. The difficulty in saving SVG is to
incorporate CSS style sheets. Here I parse the whole maze.css file into
the SVG in a special CDATA field (http://www.w3.org/TR/SVG/styling.html#StylingWithCSS).
Although this should conform to the SVG standard, Adobe Illustrator does
not like my produced SVGs. Inkscape or Browsers are able to open them, though.

--- a/templates/breakpoints.html
+++ b/templates/breakpoints.html
@@ -20,9 +20,9 @@ maze: match visualizer
       <div class="pull-left" id="title-upper-left"></div>
       <!-- Todo(meiers): make this button work -->
       <button type="button" class="pull-right button-header" id="btn-close">
+        close
         <span class="glyphicon glyphicon-remove"></span>
       </button>
-      <div class="pull-right">close</div>
     </div>
   </header>
 
