--- a/templates/breakpoints.html
+++ b/templates/breakpoints.html
@@ -35,21 +35,39 @@
       </div>
 
       <!-- Info fields (matches, breakpoints etc.) -->      
-      <div class="col-md-7" id="match-wrap">
-        <h3>last-split matches</h3>
-        <div class="list-group" id="listLASTmatches">
+      <div class="col-md-7 " id="match-wrap">
+
+        <div class="list-group collapse-group">
+          <button class="btn btn-default pull-left" type="button" data-toggle="collapse" data-target="#listLASTmatches">
+            <span class="glyphicon glyphicon-collapse-up"></span>
+          </button>
+          <h3>last-split matches</h3>
+        </div>
+        <div class="list-group collapse in" id="listLASTmatches">
           <div class="spinner">
             <span class="fa fa-spinner fa-pulse fa-5x"></span>
           </div>
         </div>
-        <h3>breakpoints</h3>
-        <div class="list-group" id="listLASTbps">
+
+        <div class="list-group collapse-group">
+          <button class="btn btn-default pull-left" type="button" data-toggle="collapse" data-target="#listLASTbps">
+            <span class="glyphicon glyphicon-collapse-up"></span>
+          </button>
+          <h3>breakpoints</h3>
+        </div>
+        <div class="list-group collapse in" id="listLASTbps">
           <div class="spinner">
             <span class="fa fa-spinner fa-pulse fa-5x"></span>
           </div>
         </div>
-        <h3>reference breakpoints</h3>
-        <div class="list-group" id="listLASTrefbps">
+
+        <div class="list-group collapse-group">
+          <button class="btn btn-default pull-left" type="button" data-toggle="collapse" data-target="#listLASTrefbps">
+            <span class="glyphicon glyphicon-collapse-up"></span>
+          </button>
+          <h3>reference breakpoints</h3>
+        </div>
+        <div class="list-group collapse in" id="listLASTrefbps">
           <div class="spinner">
             <span class="fa fa-spinner fa-pulse fa-5x"></span>
           </div>
