load library mousetrap

--- a/templates/index.html
+++ b/templates/index.html
@@ -113,6 +113,7 @@
   <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
   <script src="{{ url_for('static', filename='d3.min.js') }}"></script>
   <script src="{{ url_for('static', filename='pako.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='mousetrap.min.js') }}"></script>
   <script src="{{ url_for('static', filename='maze.js') }}"></script>
 </body>
 </html>
